--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.92.0",
+    "@aws-sdk/client-sts": "^3.92.0",
     "@aws-sdk/s3-request-presigner": "^3.92.0",
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
