--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "aws-sdk": "^2.1136.0",
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
